--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-email-download\client_secret.json
-email-download\gmail_token.json
-email-download\emails.csv
+email-download/client_secret.json
+email-download/emails.csv
+email-download/gmail_token.json
